//
// Created by alexa on 15/05/2023.
//

#ifndef SCHOTTENT_TOTTEN_BOARDER_H
#define SCHOTTENT_TOTTEN_BOARDER_H


class Boarder {


};


#endif //SCHOTTENT_TOTTEN_BOARDER_H
