//
// Created by alexa on 15/05/2023.
//

#ifndef SCHOTTENT_TOTTEN_BOARD_H
#define SCHOTTENT_TOTTEN_BOARD_H


class Board {

};


#endif //SCHOTTENT_TOTTEN_BOARD_H
