//
// Created by Azmani Zakary on 08/06/2023.
//

#ifndef SCHOTTENT_TOTTEN_TILE_H
#define SCHOTTENT_TOTTEN_TILE_H
#include "../Border.h"

namespace Model {
    class Tile : public Border {

    };
}

#endif //SCHOTTENT_TOTTEN_TILE_H
